# wildlamp

./: README.md  __init__.py  projectpy.toml  pyproject.toml
data/study_fasta/: DIO1_pinniped.fasta  DIO1_pinniped_aligned.fasta  DIO2_pinniped.fasta  DIO3_N_fur.fasta  DIO3_pinnipedia.fas  DIO3_pinnipeds.fasta  HSP70_N_fur.fasta  plasminogen_receptor.fasta  plasminogen_receptor_aligned.fasta  slc25a43.fasta
failures/: debug.py  failure_mode.py
perturbation/: analysis.py  best_mismatch_score.py  mismatch_counter.py  robustness.py
pipeline/: conc.py  csv2hits.py  final_perturb.py  final_primers.py  init_primers.py  primer2hits.py  species_fetch.py  stand_curve.py  validate.py
primer_hits/: crossreactive.py
primers/: amplicons.py  analyse_primer_rows.py  build_full_lset.py  clash.py  detect_lamp.py  lamp_score.py  mismatch.py  optimise_primer.py  scan.py  species.py
scripts/: LAMP-hits.py  acc2spp.py  fasta-stats.py  final-validation.py  primer_optimise.py
simulations/: curve_fit.py  dye.py  model_rtlamp.py  sim_curve.py
species/: table.py
thermodynamics/: fold_rna.py  primer_access.py  scoring.py  simple_thermo.py  vienna_eval.py
utils/: build_primers.py  gene_primer.py  seq.py
wildlamp/: __init__.py
wildlamp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wildlamp/alignment/: conservation.py  load_seq.py
wildlamp/failures/: failure_mode.py  suggest.py
wildlamp/perturbation/: analysis.py  best_mismatch_score.py  mutate.py  robustness.py
wildlamp/pipeline/: conc.py  csv2hits.py  final_perturb.py  (+6 more)
workflows/: publish.yaml
(+29 files in other folders)
