[project]
name = "wildlamp"
version = "1.0.5"
description = "A computational pipeline for designing conserved RT-LAMP primers across genomically uncharacterised wildlife species."
authors = [
    { name = "Thomas Stocker", email = "thomas.stocker@sydney.edu.au" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "biopython>=1.80",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "requests>=2.28",
    "primer3-py>=0.7",
    "viennarna>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wildlamp*"]
